--- a/i18n/resources/ms/common.json
+++ b/i18n/resources/ms/common.json
@@ -59,7 +59,8 @@
     "early": {
       "title": "Amaran Awal",
       "subtitle": "Kekal dimaklumkan tentang bahaya lazim di Singapura dengan data masa nyata daripada sumber rasmi. Kemas kini ini memberi gambaran jelas tentang keadaan keselamatan semasa supaya anda boleh bertindak melindungi diri dan keluarga.",
-      "subtitle2": "Memantau bahaya biasa"
+      "subtitle2": "Memantau bahaya biasa",
+      "tap_to_view": "Ketik untuk melihat butiran"
     },
 
     "see_more": "Lihat Lagi",
