--- a/i18n/resources/zh/common.json
+++ b/i18n/resources/zh/common.json
@@ -43,7 +43,8 @@
     "early": {
       "title": "预警",
       "subtitle": "通过官方来源的实时数据，及时了解新加坡常见灾害动态。这些更新能清晰呈现当前安全状况，帮助你采取行动，保护你和家人。",
-      "subtitle2": "监测常见风险"
+      "subtitle2": "监测常见风险",
+      "tap_to_view": "点按查看详细信息"
     },
     "see_more": "查看更多",
     "prep": {
