--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -56,7 +56,8 @@
     "early": {
       "title": "முன்னெச்சரிக்கை",
       "subtitle": "அதிகாரப்பூர்வ தரவூற்றுகளில் இருந்து வரும் நேரடி தகவல்களுடன் சிங்கப்பூரின் பொதுவான ஆபத்துகளைப் பற்றித் தொடர்ந்து அறிந்திருங்கள். இத்தகவல்கள் தற்போதைய பாதுகாப்பு நிலையைத் தெளிவாகக் காட்டும்; உங்களையும் குடும்பத்தினரையும் பாதுகாக்க வேண்டிய நடவடிக்கைகளை எடுக்க உதவும்.",
-      "subtitle2": "பொதுவான அபாயங்களை கண்காணிக்கிறது"
+      "subtitle2": "பொதுவான அபாயங்களை கண்காணிக்கிறது",
+      "tap_to_view": "விவரங்களைப் பார்க்க தட்டவும்"
     },
 
     "see_more": "மேலும் பார்க்க",
