--- a/i18n/resources/ta/common.json
+++ b/i18n/resources/ta/common.json
@@ -199,6 +199,8 @@
     "choose_language": "மொழியை தேர்ந்தெடுக்கவும்",
     "theme": "தீம்",
     "notifications": "அறிவிப்புகள்",
+    "notify_all_desc": "ஆன்: எச்சரிக்கை மற்றும் ஆபத்து எச்சரிக்கைகளைப் பெறுவீர்கள்.",
+    "notify_danger_only_desc": "ஆஃப்: ஆபத்து (முக்கியமான) எச்சரிக்கைகள் மட்டுமே அனுப்பப்படும்.",
     "sound": "ஒலி",
     "vibration": "அதிர்வு",
     "preparedness_settings": "அவசரத் தயார்நிலை அமைப்புகள்",
